# bit-byte-block

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: bit-byte-block.env.example  clockwork.toml  downstream-repos.toml
config/miners/: clockwork-amd.toml  clockwork-cpu.toml  clockwork-nvidia.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
scripts/: miner-setup.sh  run_proxy.sh  setup.sh
src/bit_byte_block/: __init__.py  __main__.py  cli.py  config.py  miner.py  monitor.py  proxy.py  wallet.py
tests/: test_config.py  test_monitor.py  test_proxy.py
